# BSUIR_Labs

./: README.md
4term/java/: IntelliJ IDEA 2023.1.3.lnk  Postman.lnk  pgAdmin 4.lnk
4term/java/Jlab6/: Dockerfile  docker-compose.yml
4term/java/Статья ПНаЯВУ/: ИО-2024-250501-Снитко-2Исправлено.docx
4term/АПК/myapkLABS/: Oracle VM VirtualBox.lnk  готовые лабы.txt
4term/АПК/Общее/: Задания АПЭВМ_2024.docx  Программирование COM порта ПК.htm
4term/ОСиСП/.Курсовой/: Код.docx  Снитко Д.А. ПЗ — копия (2).docx  Снитко Д.А. ПЗ — копия.docx  Снитко Д.А. ПЗ.docx
4term/ОСиСП/.Курсовой/Код/Прога/BACKUP/С сортировкой/: CMakeLists.txt  display.c  display.h  main.c  processes.h  read.c  read.h
4term/СхемТ/К лабам/: теориясхемт1лаба.txt
4term/ТВиМС/: мое.docx
ASM 3sem/lab 1/: лаб1 пнаяа.docx
ASM 3sem/lab 2/: lab2 пнаяа.txt  грунт.txt  лаб2 пнаяа.docx
ASM 3sem/lab 3/: lab3asm.txt  грунт3.txt  лаб3 пнаяа.docx
ASM 3sem/lab 4/: clear.txt  лаб4 пнаяа.docx
ASM 3sem/lab 5/: asmlab5.txt  грунт 5.txt  лаб 5 пнаяа.docx
ASM 3sem/lab 6/: asmlab6.txt  грунт 6.txt  лаб 6 пнаяа.docx
ASM 3sem/lab 7/: another7.txt  lab7 пнаяа.txt  грунт 7.txt  лаб7 пнаяа.docx
ASM 3sem/lab 8/: lab8asm.txt  грунт 8.txt  лаб8 пнаяа.docx
CPP 3sem/cpplab1/: cpp1l.txt
CPP 3sem/cpplab2/: cpplab2.txt  main.cpp
CPP 3sem/cpplab5/: CMakeLists.txt  main.cpp
CPP 3sem/cpplab6/: CMakeLists.txt
CPP 3sem/cpplab7/: CMakeLists.txt  main.cpp
CPP 3sem/cpplab8/: CMakeLists.txt  main.cpp
lab-2-2/: CMakeLists.txt
lab-3-3/: Roses.txt  cppLab3.txt
lab-5-14/: cppLab5.txt
lab-6-14/: cppLab6.txt
(+223 files in other folders)
